[EME][Thunder][GStreamer] Assert on 0 length messages from Thunder https://bugs.webkit.org/show_bug.cgi?id=218173

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/eme/CDMThunder.cpp:
(WebCore::CDMInstanceSessionThunder::CDMInstanceSessionThunder):
Assert on 0 length messages to get a crash and be able to analyze
why.


Canonical link: https://commits.webkit.org/230872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268968 268f45cc-cd09-0410-ab3c-d52691b4dbfc